K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    name: matrix
    app: matrix
